<resources>
    <string name="app_name">DatabaseApp</string>
    <string name="add_button">Add</string>
    <string name="edit_name">Enter name</string>
    <string name="edit_email">Enter email</string>
    <string name="edit_phone_number">Enter phone number</string>
    <string name="edit_button">Add to database</string>

    <string name="person_name">Name: </string>
    <string name="person_email">E-mail: </string>
    <string name="person_phone_number">Phone Number: </string>
    <string name="person_remove_button">Remove</string>

</resources>
